--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,9 @@ scp = "*"
 scipy = "*"
 sqlparse = "*"
 sympy = "*"
+jupyter = "^1.1.1"
+jupyterlab = "^4.3.6"
+notebook = "^7.3.3"
 
 [tool.poetry.group.full]
 optional = true
