deleted obsolete references to csc clusters

--- a/cxsystem2/bui/cx_bui/examples/pytest_anatomy_config.json
+++ b/cxsystem2/bui/cx_bui/examples/pytest_anatomy_config.json
@@ -20,9 +20,9 @@
     "trials_per_config": 1,
     "default_clock": "0.1*ms",
     "run_in_cluster": 0,
-    "cluster_job_file_path": "./csc_taito.job",
+    "cluster_job_file_path": "./csc_puhti.job",
     "cluster_number_of_nodes": 1,
-    "cluster_address": "taito.csc.fi",
+    "cluster_address": "puhti.csc.fi",
     "cluster_username": "username",
     "cluster_workspace": "/homeappl/home/username/CxWork"
   },
