--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cxsystem2"
-version = "2.2.6"
+version = "2.2.7"
 description = "A cerebral cortex simulation framework"
 authors = ["Vafa Andalibi", "Henri Hokkanen", "Simo Vanni <simo.vanni@helsinki.fi>"]
 license = "MIT"
@@ -29,7 +29,7 @@ classifiers = [
     "Operating System :: POSIX :: Linux",
     "Operating System :: Unix",
     "Programming Language :: Python",
-    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.14",
     "Topic :: Scientific/Engineering",
     "Topic :: Scientific/Engineering :: Medical Science Apps.",
     "Topic :: Software Development :: Libraries",
@@ -37,48 +37,32 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-brian2 = "2.8.0"
-brian2cuda = "^1.0a7"
-cffi = "*"
-cycler = "*"
-cython = "*"
-docopt = "*"
-ipython = "*"
-jinja2 = "*"
-kiwisolver = "*"
-markupsafe = "*"
+python = "^3.14"
+
+[tool.poetry.group.compute.dependencies]
+brian2 = "2.10.1"
+brian2cuda = "^1.0b1"
 matplotlib = "*"
-mpmath = "*"
 numpy = "*"
 pandas = "*"
-paramiko = "*"
-ping3 = "*"
-pycparser = "*"
-pynacl = "*"
-pyparsing = "*"
+paramiko = "*" # necessary for cluster run
+ping3 = "*" # necessary for cluster run
 pytest = "*"
-pytest-cov = "*"
-python = "^3.12"
-python-dateutil = "*"
-pytz = "*"
-pyyaml = "*"
-scp = "*"
 scipy = "*"
-sqlparse = "*"
-sympy = "*"
-jupyter = "^1.1.1"
-jupyterlab = "^4.3.6"
-notebook = "^7.3.3"
+scp = "*" # necessary for cluster run
 
-[tool.poetry.group.full]
+[tool.poetry.group.standard]
 optional = true
 
-[tool.poetry.group.full.dependencies]
+[tool.poetry.group.standard.dependencies]
+ipython = "*"
+jupyterlab = "^4.3.6"
+
+[tool.poetry.group.development]
+optional = true
+
+[tool.poetry.group.development.dependencies]
 isort = "*"
-pyopenssl = "*"
-requests = "*"
-six = "*"
-werkzeug = "*"
 sphinx = "*"
 sphinx-rtd-theme = "*"
 wheel = "*"
